add notification dto, model and component